# yolo_adversarial_fullstack

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/modules/tog/: base.py  preprocessing.py
frontend/: Dockerfile  README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: Footer.tsx  Header.tsx  ImageProcessor.tsx  ImageUploader.tsx
frontend/src/pages/: Index.tsx
