[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daniel García Peña <info@iamdgarcia.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.11"}
yolo = "^0.3.2"
uvloop = "^0.17.0"
ultralytics = "^8.3.94"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

